GTK+-3.20 GreenSubmarine: fix scrollbar breakage from gtk+-3.19.11

--- a/desktop-themes/Green-Submarine/gtk-3.0/other-applications.css
+++ b/desktop-themes/Green-Submarine/gtk-3.0/other-applications.css
@@ -143,37 +143,6 @@ NemoTrashBar .button *:disabled {
     text-shadow: none;
 }
 
-.nemo-window .sidebar scrollbar {
-    background-image: none;
-    border-style: solid;
-    -GtkRange-stepper-size: 16;
-    -GtkRange-stepper-spacing: 0;
-    -GtkRange-trough-border: 1;
-    -GtkRange-arrow-scaling: 0.666;
-    -GtkRange-slider-width: 13;
-    -GtkRange-trough-under-steppers: 1;
-    -GtkScrollbar-has-backward-stepper: true;
-    -GtkScrollbar-has-forward-stepper: true;
-    -GtkScrollbar-activate-slider: 1;
-    -GtkScrollbar-min-slider-length: 31;
-    -GtkScrollbar-slider-width: 11;
-    -GtkScrolledWindow-scrollbar-spacing: 0;
-}
-
-.nemo-window .sidebar scrollbar.vertical.left trough {
-    border-radius: 0;
-    border-width: 0 0px 0 1px;
-    border-style: solid;
-    border-color: shade (@theme_bg_color, 0.96);
-}
-
-.nemo-window .sidebar scrollbar trough {
-    border-radius: 0;
-    border-width: 1px 0 0px 0;
-    border-style: solid;
-    border-color: shade (@theme_bg_color, 0.96);
-}
-
 NemoWindow .sidebar .frame {
     border-width: 0px;
     border-style: none;
